Use singleton scope for ZLMS